--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8081
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:tipoelectrodomestico
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=[type here your username]
+spring.datasource.password=[type here your password]
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
